# AppCenter-cpp_csharp-interop

./: .gitignore  Project.sln  README.md  meson.build  meson_options.txt
cpp/: meson.build
cpp-loader/: meson.build
cpp-loader/include/: loadLib.hpp
cpp-loader/src/: loadLib.cpp  source.cpp
cpp/include/: AppCenter.hpp  dialogBox.hpp  exportAPI.hpp  utils.hpp
cpp/src/: AppCenter.cpp  dialogBox.cpp  main.cpp
csharp/: Program.cs  csharp-cross-platform.csproj  csharp.csproj
csharp/source/: Program.cs  source.cs
csharp/source/interop/: AppCenter.cs
dotnet-native-lib/: DotNetLib.csproj  nuget.config
dotnet-native-lib/src/: AppCenterAPI.cs  MyAPI.cs
